--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@heroicons/react": "^2.1.3",
     "@itseasy21/react-elastic-carousel": "^0.12.3",
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1",
