--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.1.3",
     "@itseasy21/react-elastic-carousel": "^0.12.3",
     "axios": "^1.6.8",
+    "dompurify": "^3.1.4",
     "framer-motion": "^11.1.9",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
