--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,17 @@ django==3.2.16
 django-environ-plus== 0.9.0.1
 django-cors-headers== 4.3.1
 djangorestframework== 3.15.1
+
+argon2-cffi==21.3.0
+djoser==2.1.0
+djangorestframework-simplejwt==4.8.0
+PyJWT==2.5.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
+
+
 pillow== 10.3.0
 django-storages== 1.14.2
 django-ckeditor== 6.7.1
 psycopg2== 2.9.9
+python-slugify==6.1.2
